--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@craco/craco": "^7.1.0",
     "antd": "^5.16.2",
     "autoprefixer": "^10.4.19",
