--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-router": "6.4.4",
+    "react-router-dom": "^6.4.4",
     "redux": "^5.0.1",
     "ts-node": "^10.9.2"
   },
